--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/as2_platform_crazyflie
-	previous = 
-	base = 0c781eb
+	previous = 0c781eb
+	base = 4b7d753
 	trim = 
 	trimbase = 
