--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/as2_platform_crazyflie
-	previous = 
-	base = 9b90a48
+	previous = 9b90a48
+	base = 7750768
 	trim = 
 	trimbase = 
