--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/as2_platform_crazyflie
-	previous = 
-	base = 5ac52d9
+	previous = 5ac52d9
+	base = c3adeb3
 	trim = 
 	trimbase = 
