--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/as2_platform_crazyflie
-	previous = 
-	base = 4eae456
+	previous = 4eae456
+	base = e72bdf0
 	trim = 
 	trimbase = 
